--- a/BinaryJSON/BinaryJSON.csproj
+++ b/BinaryJSON/BinaryJSON.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BinaryJSON\Serializations\DictionarySerialization.cs" />
     <Compile Include="Test\JsonFX\About.cs" />
     <Compile Include="Test\JsonFX\DataReaderProvider.cs" />
     <Compile Include="Test\JsonFX\DataSerializer.cs" />
